# fake-evaluator

./: README.md  pyproject.toml
fake_evaluator/: foo.py
tests/: test_foo.py
